# iced_learning

./: Cargo.toml  LICENSE  README.md
docs/: architecture.md  future-demos.md  iced-notes.md
src/: app.rs  forms.rs  main.rs  menu.rs  message.rs  theme.rs
src/pages/: about.rs  advanced.rs  async_tasks.rs  controls.rs  dashboard.rs  data_flow.rs  forms.rs  layouts.rs  mod.rs  windows.rs
src/state/: mod.rs  reducer.rs
src/widgets/: mod.rs
